--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="cache.manifest">
+<htm>
 
 <head>
 <title>DICOM Web Viewer</title>
@@ -17,7 +17,7 @@ body { background-color: #222; color: white;
 #infotr { color: #333; text-shadow: 0 1px 0 #fff; }
 </style>
 <link rel="stylesheet" href="ext/jquery-ui/themes/ui-darkness/jquery-ui-1.10.3.min.css">
-<!-- Third party -->  
+<!-- Third party -->
 <script type="text/javascript" src="ext/jquery/jquery-2.0.3.min.js"></script>
 <script type="text/javascript" src="ext/jquery-ui/jquery-ui-1.10.3.min.js"></script>
 <script type="text/javascript" src="ext/flot/jquery.flot.min.js"></script>
