1つ目のファイルだけ出力

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@ body { background-color: #222; color: white;
 <script type="text/javascript" src="src/tools/windowLevel.js"></script>
 <script type="text/javascript" src="src/tools/zoom.js"></script>
 <script type="text/javascript" src="src/utils/string.js"></script>
+<script type="text/javascript" src="src/zip/WebContent/zip.js"></script>
+<script type="text/javascript" src="src/zip/WebContent/zip-fs.js"></script>
+<script type="text/javascript" src="src/zip/WebContent/zip-ext.js"></script>
 
 <!--  Launch the app -->
 <script type="text/javascript" src="src/applauncher-s.js"></script>
