--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@ body { background-color: #222; color: white;
 <script type="text/javascript" src="src/zip/WebContent/zip-fs.js"></script>
 <script type="text/javascript" src="src/zip/WebContent/zip-ext.js"></script>
 
+<script type="text/javascript" src="src/io/remote.js"></script>
+
 <!--  Launch the app -->
 <script type="text/javascript" src="src/applauncher-s.js"></script>
 </head>
